did style responsive for ipad

--- a/app/assets/stylesheets/appointments.scss
+++ b/app/assets/stylesheets/appointments.scss
@@ -80,9 +80,10 @@
   
 //   }
 
-  @media (max-width: 600px){
+  @media (max-width: 375px){
       .body {
           display: block;
+          height: 812px;
       }
     .container{
         float: right;
@@ -90,19 +91,78 @@
         width: 100%;
         
     }
-     .form, .barberpost {
+    .heade {
+        width: 100%;
+    }
+     .form {
+         width: 100%;
+         float:right;
+         margin-top: 20px;
+         
+     } 
+     .barberpost {
         width: 100%;
         text-align: center;
 
     }
+    .photo {
+        
+        width: 100%;
+        float:right;
+        margin-top: 20px;
+        display: block;
+        img{
+            width: 100%;
+        }
+
+    }
+    #head {
+        font-size: 1.3rem;
+    }
     p {
         font-size: 1.25rem;
+        line-height: 1.5
+    }
+    footer{
+        font-size: 0.10rem;
     }
 
 }
-@media (max-width: 800px){
+@media (max-width: 768px){
+    .body {
+        display: block;
+        height: 1024px;
+    }
+    .container{
+        float: right;
+        margin-top: 20px;
+        width: 100%;
+        
+    }
+    .heade {
+        width: 100%;
+    }
+    .form {
+        width: 100%;
+        float:right;
+        margin-top: 20px;
+        
+    } 
+    .photo {
+        
+        width: 100%;
+        float:right;
+        margin-top: 20px;
+      
+
+    }
+
+
     p {
         font-size: 1.5rem;
         line-height: 1.5;
+    }
+    footer{
+        font-size: 0.9rem;
     }
 }
